apps/zwave-js-ui/gateway.yaml
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zwave-route
  namespace: zwave
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
      sectionName: gateway-wildcard-https
  hostnames:
    - "zwave.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zwave-service
          port: 8091
